Gateway-api-canary/v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo-v1
  namespace: gateway-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: demo
      version: v1

  template:
    metadata:
      labels:
        app: demo
        version: v1

    spec:
      containers:
        - name: app
          image: kiruthik067/canary-demo:1.0

          ports:
            - name: http
              containerPort: 8080
