Gateway-api-canary/v1-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-v1
  namespace: gateway-demo
  labels:
    monitoring: demo

spec:
  selector:
    app: demo
    version: v1

  ports:
    - name: http
      port: 80
      targetPort: 8080
