Gateway-api-canary/v2-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-v2
  namespace: gateway-demo
  labels:
    monitoring: demo
spec:
  selector:
    app: demo
    version: v2

  ports:
    - name: http
      port: 80
      targetPort: 8080
