Gateway-api-canary/gateway.yaml
# gateway.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: demo-gateway
  namespace: gateway-demo

spec:
  gatewayClassName: nginx

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All
