Gateway-api-canary/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: demo-route
  namespace: gateway-demo

spec:
  parentRefs:
    - name: demo-gateway

  hostnames:
    - "demo.example.com"

  rules:
    - backendRefs:
        - name: demo-v1
          port: 80
          weight: 1

        - name: demo-v2
          port: 80
          weight: 9
